mssql/k8s/deploy/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: mssql
  name: mssql
  namespace: mssql
spec:
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
      - env:
        - name: MSSQL_SA_PASSWORD
          valueFrom:
            secretKeyRef:
              name: mssql-secret
              key: mssql-password
        - name: ACCEPT_EULA
          value: "Y"
        - name: TZ
          value: Asia/Singapore
        image: mcr.microsoft.com/mssql/server:2022-latest
        imagePullPolicy: Always
        name: mssql-app
        ports:
        - containerPort: 1433
          name: mssql
          protocol: TCP
        volumeMounts:
        - mountPath: /var/opt/mssql/mssql.conf
          subPath: mssql.conf
          name: mssql-ssl-config
          readOnly: true
        - mountPath: /var/opt/mssql/secrets
          name: mssql-ssl
          readOnly: true
        - mountPath: /var/opt/mssql/data
          name: mssql-volume
          subPath: data
          readOnly: false
      restartPolicy: Always
      securityContext:
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      volumes:
      - name: mssql-ssl-config
        configMap:
          name: mssql-ssl-config
      - name: mssql-ssl
        projected:
          sources:
          - configMap:
              name: kube-root-ca.crt
          - secret:
              name: mssql-tls
      - name: mssql-volume
        persistentVolumeClaim:
          claimName: mssql-pvc
