mssql/k8s/deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mssql
  name: mssql-service
  namespace: mssql
spec:
  ports:
  - port: 1433
    protocol: TCP
    targetPort: mssql
  selector:
    app: mssql
